@@ -1,4 +1,4 @@
-# this class has dubious semantics and we only have it so that
+# This class has dubious semantics and we only have it so that
 # people can write params[:key] instead of params['key']
 
 class HashWithIndifferentAccess < Hash
@@ -63,6 +63,11 @@ class HashWithIndifferentAccess < Hash
 
   def stringify_keys!; self end
   def symbolize_keys!; self end
+
+  # Convert to a Hash with String keys.
+  def to_hash
+    Hash.new(default).merge(self)
+  end
 
   protected
     def convert_key(key)
