@@ -1,5 +1,7 @@
 *SVN*
 
+* HashWithIndifferentAccess#to_hash converts to a Hash with String keys and the same default value.  [Jeremy Kemper]
+
 * Fix remove_constant to correctly handle constant names of the form "::A::...". References #6720. [Nicholas Seckar]
 
 * Fixed Array#to_xml when it contains a series of hashes (each piece would get its own XML declaration) #6610 [thkarcher/cyu]
